# tofu_hex_editor

./: .gitignore  Cargo.toml  README.md
executables/small_2024_12_16/: tofu
src/: byte_rope.rs  current_buffer.rs  lib.rs
src/hex_view/: view.rs
src/modes/: collapse.rs  command.rs  insert.rs  jumpto.rs  mod.rs  mode.rs  normal.rs  replace.rs  search.rs  split.rs
